添加时区和时区处理；更新消息详情展示；修复bug；优化迁移脚本
