# src/main/kotlin/com/heerkirov/animation/model/result/MessageRes.kt
@@ -8,3 +8,9 @@ data class MessageRes(val id: Long,
                       val content: Any,
                       val read: Boolean,
                       @JsonProperty("create_time") val createTime: String)
+
+data class ContentPublishRes(@JsonProperty("animation_id") val animationId: Int,
+                             @JsonProperty("title") val title: String,
+                             @JsonProperty("cover") val cover: String?,
+                             @JsonProperty("old_episodes") val oldEpisodes: Int,
+                             @JsonProperty("new_episodes") val newEpisodes: Int)
